swagger update; user controller update
